# nanocl

./: .env  .gitignore  Cargo.toml  DEVELOPING.md  README.md  TODO.md  codecov.yml  env  install.sh  install_dev.sh  nanocl_schema.drawio  pre_start.sh  rustfmt.toml
.dev/: containerd.conf  dockerd.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: checks.yml  ubuntu.test.yml
daemon/: Cargo.toml
daemon/migrations/2022-05-20-134629_create_namespaces/: down.sql
daemon/migrations/2022-05-22-111328_create_cargo/: down.sql
daemon/migrations/2022-05-22-113739_create_git_namespaces/: up.sql
daemon/migrations/2022-05-22-114043_create_users/: up.sql
daemon/src/: app_state.rs  datasource.rs  dependencies.rs  docker.rs  main.rs  models.rs  openapi.rs  schema.rs
daemon/src/controllers/: cargo.rs  docker_image.rs  git_repository.rs  http_error.rs  mod.rs  namespace.rs  ping.rs  system.rs  utils.rs
daemon/src/datasources/: mod.rs
daemon/src/datasources/mongo/: datasource.rs  mod.rs  models.rs  repository.rs
daemon/src/models/: errors.rs  generic.rs  mod.rs  namespace.rs
daemon/src/repositories/: mod.rs  namespace.rs
daemon/src/responses/: error.rs  errors.rs  mod.rs  models.rs
daemon/static/swagger/: swagger-initializer.js
daemon/static/websocket/: index.html  ws.js
doc/: README.md  config.js  nanocl_schema.drawio
doc/guides/: README.md
doc/installation/: README.md  linux.md
doc/man/: README.md  nanocl.1.md
doc/manuals/: README.md
doc/references/: README.md
docker_api/: Cargo.toml  README.md
docker_api/src/: api.rs  client.rs  container.rs  json_helper.rs  lib.rs  models.rs
docker_api/src/container/: mod.rs  models.rs
docker_api/src/image/: mod.rs  models.rs
docker_api/tests/: integration_test.rs
dockerust/: Cargo.toml
dockerust/src/: container.rs  container_struct.rs  docker_client.rs  dockerust.rs
dockerust/tests/: dockerust.rs
fake_path/etc/: dnsmasq.conf
nanocld/: .env  Cargo.toml  Makefile.toml  diesel.toml  openapi.md
nanocld/migrations/2022-05-20-134629_create_namespaces/: up.sql
nanocld/migrations/2022-05-22-111328_create_cargo/: up.sql
nanocld/migrations/2022-05-22-113739_create_git_repositories/: down.sql  up.sql
nanocld/migrations/2022-05-22-114043_create_users/: up.sql
nanocld/migrations/2022-06-03-104124_create_clusters/: up.sql
nanocld/migrations/2022-06-13-102206_git_repository_branches/: up.sql
nanocld/migrations/2022-06-15-072243_cluster_networks/: up.sql
nanocld/migrations/2022-06-17-122356_create_cargos/: down.sql  up.sql
nanocld/migrations/2022-06-17-122356_create_cluster_cargos/: up.sql
nanocld/migrations/2022-06-21-130545_create_cargo_ports/: down.sql  up.sql
nanocld/migrations/2022-06-23-113735_create_cargo_proxy_configs/: down.sql  up.sql
nanocld/migrations/2022-06-23-113735_create_cluster_proxy_configs/: down.sql  up.sql
nanocld/migrations/2022-06-25-125147_create_nginx_templates/: up.sql
nanocld/src/: boot.rs  cli.rs  config.rs  errors.rs  install.rs  main.rs  models.rs  openapi.rs  postgre.rs  schema.rs  server.rs  test.rs  utils.rs
nanocld/src/controllers/: cargo.rs  cluster.rs  cluster_network.rs  cluster_variable.rs  container.rs  container_image.rs  errors.rs  git_repository.rs  mod.rs  namespace.rs  namespace_cluster.rs  namespace_git_repository.rs  nginx_template.rs  utils.rs
nanocld/src/docker/: models.rs
nanocld/src/events/: mod.rs  system.rs
nanocld/src/repositories/: cargo.rs  cargo_env.rs  cargo_port.rs  cargo_ports.rs  cargo_proxy_config.rs  cluster.rs  cluster_cargo.rs  cluster_network.rs  cluster_proxy_config.rs  cluster_variable.rs  errors.rs  git_repository.rs  git_repository_branch.rs  mod.rs  namespace.rs  nginx_template.rs
nanocld/src/server/: ntex.rs
nanocld/src/services/: README.md  cargo.rs  cluster.rs  cluster_variable.rs  dnsmasq.rs  docker.rs  errors.rs  git_repository.rs  github.rs  ipsec.rs  mod.rs  nginx.rs  postgresql.rs  utils.rs
nanocld/src/utils/: github.rs
nanocld/static/swagger/: index.css  index.html  swagger-initializer.js
nanocli/: Cargo.toml  Makefile.toml  README.md  test.yml
nanocli/src/: cli.rs  error.rs  errors.rs  main.rs  man.rs  models.rs  version.rs
nanocli/src/nanocld/: cargo.rs  client.rs  cluster.rs  container_image.rs  error.rs  git_repository.rs  mod.rs  models.rs  namespace.rs  nginx_template.rs
nanocli/src/yml/: config.rs  errors.rs  mod.rs  models.rs  parser.rs
nanocli/tests/: cargo.test.yml  forum.test.yml  gitrepository.yml  http_path.nginx  namespace.test.yml  nginx_template.test.yml  stream.nginx
phantom/: Cargo.toml
phantom/src/: deploy.rs  dnsmasq.rs  docker_helper.rs  main.rs  network.rs  nginx.rs  posgresql.rs  test.yml
rsocknet/: Cargo.toml
rsocknet/src/: main.rs
schema/: nanocl_schema.drawio
scripts/: install_nanocl.sh  pre_start_nanocl.dev.sh  pre_start_nanocl.sh  release_nanocl.sh  release_nanocld.sh
(+17 files in other folders)
