[workspace]
members = [
  "nanocld",
  "phantom",
  "nanocli",
  "rsocknet"
]

[patch.crates-io]
nanocld = { path = "nanocld" }
nanocli = { path = "nanocli" }
phantom = { path = "phantom" }
rsocknet = { path = "rsocknet" }
ntex-files = { git = "https://github.com/ntex-rs/ntex-extras.git" }
