[workspace]
members = [
  "nanocld",
  "phantom",
  "nanocli",
  "docker_api",
]

[patch.crates-io]
nanocld = { path = "nanocld" }
nanocli = { path = "nanocli" }
phantom = { path = "phantom" }
docker_api = { path = "docker_api" }
ntex-files = { git = "https://github.com/ntex-rs/ntex-extras.git" }
