[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
sysinfo = "0.23"
env_logger = "0.8"
docker-api = "0.8"
serde = { version = "1.0", features = ["derive"] }
ntex = { version = "0.5", features = ["openssl", "rustls", "tokio"] }
mongodb = { version = "2.2.0", default-features = false, features = ["tokio-runtime"] }
