[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
sysinfo = "0.23"
bollard = "0.12"
utoipa = "0.2"
env_logger = "0.8"
serde_json = "1.0.81"
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.12", features = ["derive"] }
ntex = { version = "0.5", features = ["openssl", "rustls", "tokio"] }
ntex-files = "0.1"
mongodb = { version = "2.2.0", default-features = false, features = ["tokio-runtime"] }
