[package]
name = "docker_api"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
name = "docker_api"
path = "src/lib.rs"


[dependencies]
futures = "0.3"
thiserror = "1.0.24"
serde_with = "1.14.0"
serde_json = "1.0.81"
serde_urlencoded = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
ntex = { version = "0.5.18", features = ["openssl", "rustls", "tokio"] }
utoipa = { version = "1.0.2", features = ["uuid", "chrono"], optional = true }

[features]
default = []
utoipa = ["dep:utoipa"]
