[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
r2d2 = "0.8"
futures = "0.3"
sysinfo = "0.23"
bollard = "0.12"
env_logger = "0.8"
ntex-files = "0.1"
serde_json = "1.0.81"
uuid = { version = "0.8", features = ["serde", "v4"] }
utoipa = { version = "1.0.2", features = ["uuid"] }
serde = { version = "1.0", features = ["derive"] }
ntex = { version = "0.5", features = ["openssl", "rustls", "tokio"] }
diesel = { version = "1.4.4", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
