[package]
name = "nanocld"
version = "0.1.0"
edition = "2021"

[dependencies]
r2d2 = "0.8"
futures = "0.3"
chrono = "0.4.19"
env_logger = "0.8"
ntex-files = "0.1"
thiserror = "1.0.24"
serde_json = "1.0.81"
url = { version = "2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
utoipa = { version = "1.0.2", features = ["uuid", "chrono"] }
ntex = { version = "0.5.18", features = ["openssl", "rustls", "tokio"] }
diesel-derive-enum = { version = "1.1.2", features = ["postgres"] }
diesel = { version = "1.4.8", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
